Fixed social icon link color contrast to pass WAVE report

--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,12 @@ body {
 
 .social-link {
     font-size: 2rem;
-    color: #777;
+    color: #16e0bd;
     transition: color .3s;
 }
 
 .social-link:hover {
-    color: #16e0bd;
+    color: #fff;
 }
 
 .year {
